docs: swagger for auth
